[package]
name = "roland-rs-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core library for Roland VR-6HD remote control protocol"
repository = "https://github.com/FlowingSPDG/roland-rs"

[dependencies]
# no dependencies - pure core implementation
# Uses only `alloc` crate (part of Rust standard library, no external dependency)
